--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-node_modules/**/*
+node_modules/
 .expo/*
 npm-debug.*
 *.jks
@@ -12,3 +12,7 @@ web-report/
 
 # macOS
 .DS_Store
+
+# lib
+dist/
+coverage/
