--- a/package.json
+++ b/package.json
@@ -5,23 +5,44 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint App.tsx **/*.ts **/*.tsx"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/native": "^5.6.0",
+    "@react-navigation/stack": "^5.6.2",
+    "@types/react-router-native": "^5.1.0",
+    "apollo-boost": "^0.4.9",
     "expo": "~37.0.3",
+    "graphql": "^15.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-functional": "^3.0.1",
+    "eslint-plugin-jsdoc": "^28.5.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "typescript": "^3.9.5"
   },
   "private": true
 }
