--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.6.0",
     "@react-navigation/stack": "^5.6.2",
     "@types/react-router-native": "^5.1.0",
     "apollo-boost": "^0.4.9",
+    "dotenv": "^8.2.0",
     "expo": "~37.0.3",
+    "expo-auth-session": "~1.2.1",
+    "expo-web-browser": "~8.2.1",
     "graphql": "^15.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -25,6 +31,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "react-router-native": "^5.2.0"
   },
@@ -42,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
   "private": true
