--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,10 @@
 version: "3"
 
 services:
-  hub-web:
-    image: choco/interpreter-hub:${TAG}
-    command: web
+  educa-switch-challenge:
+    build: .
     ports:
-      - 2000:2000
-    environment:
-      - HUB_API=${HUB_API}
-
-  hub-api:
-    image: choco/interpreter-hub:${TAG}
-    command: api
-    ports:
-      - 3000:3000
-    environment:
-      - SESSION_SECRET=${SESSION_SECRET}
-      - SESSION_EXPIRATION=${SESSION_EXPIRATION}
-      - SALT_ROUNDS=${SALT_ROUNDS}
-      - MONGO_URI=${MONGO_URI}
-      - BUCKET=${BUCKET}
-      - IAM_KEY=${IAM_KEY}
-      - IAM_SECRET=${IAM_SECRET}
-    # restart: always
-    links:
-      - mongo
-      # - redis
-
-
-  mongo:
-    image: mongo
+      - 19000:19000
+      - 19006:19006
     volumes:
-      - data:/data/db
-    ports:
-      - 27017:27017
-
-  nginx:
-    image: choco/nginx:${TAG}
-    volumes:
-      - letsencrypt:/etc/letsencrypt
-      - certbot:/var/www/certbot
-      # - ./configs/nginx/InterpreterHub:/etc/nginx/conf.d
-      # - ./configs/nginx/nginx.conf:/etc/nginx/nginx.conf
-    environment:
-      - DOMAINS=${DOMAINS}
-      - SERVICES=${SERVICES}
-      - PORTS=${PORTS}
-      - EMAIL=${EMAIL}
-    links:
-      - hub-web
-      - hub-api
-    ports:
-      - 80:80
-      - 443:443
-
-  # redis:
-  #   image: redis:latest
-  #   ports:
-  #     - 6379$
-  
-volumes:
-  data:
-  letsencrypt:
-  certbot:
+      - ./env.json:/usr/src/env.json
