--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint App.tsx **/*.ts **/*.tsx"
+    "lint": "eslint App.tsx **/*.ts **/*.tsx",
+    "test": "jest --forceExit --passWithNoTests --detectOpenHandles --notify --preset ts-jest --testEnvironment jsdom"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
@@ -18,6 +19,7 @@
     "@react-navigation/stack": "^5.6.2",
     "@types/react-router-native": "^5.1.0",
     "apollo-boost": "^0.4.9",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "expo": "~37.0.3",
     "expo-auth-session": "~1.2.1",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/jest": "^26.0.3",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
@@ -50,6 +53,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "^26.1.0",
+    "ts-jest": "^26.1.1",
     "typescript": "^3.9.5"
   },
   "private": true
