--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint App.tsx **/*.ts **/*.tsx",
+    "docs": "jsdoc -c ./jsdoc.json",
     "test": "jest --forceExit --passWithNoTests --detectOpenHandles --notify --preset ts-jest --testEnvironment jsdom"
   },
   "dependencies": {
@@ -45,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "babel-preset-expo": "~8.1.0",
+    "better-docs": "^2.0.1",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-functional": "^3.0.1",
@@ -53,6 +55,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "^26.1.0",
+    "jsdoc": "^3.6.4",
     "ts-jest": "^26.1.1",
     "typescript": "^3.9.5"
   },
